--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,6 +6,7 @@
 }
 
 body{
+    border: 1px solid black;
 }
 
 /* HEADER */
@@ -72,99 +73,16 @@ header{
 
 /* HEADER */
 
-/* MAIN */
 
-.container-main{
-    width: 100%;
-    height: 370px;
-    background-color: #E0DB92;
-}
 
-h2{
-    font-size: 40px;
-}
+/* FOOTER */
 
-p{
-    font-size: 20px;
-}
-
-.main-text{
-    padding: 81px 809px 241px 80px;
-}
-
-.sub-text1{
-    padding-left: 120px;
-    margin-top: 20px;
-}
-
-.sub-text2{
-    padding-left: 135px;
-}
-
-.list-img{
-    list-style-type: none;
-}
-
-.main-img1{
-    height: 314px;
-    position: absolute;
-    top: 110px;
-    right: 500px;
-}
-
-.main-img2{
-    height: 314px;
-    position: absolute;
-    top: 110px;
-    right: 100px;
-}
-
-/* MAIN */
-
-/* NAV */
-
-.menu{
-    border: 1px solid black;
-    height: 68px;
-}
-
-.list{
-    list-style-type: none;
-    display: inline-flex;
-    flex-direction: row;
+footer{
+    background-color: #B0E092;
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    height: 68px;
-    gap: 20px;
-    margin-left: 15px;
-    font-size: 25px;
+    height: 30px;
 }
 
-.list-menu{
-    text-decoration: none;
-    color: black;
-}
-
-.list-menu:hover{
-    color: red;
-}
-
-.busca{
-    position: absolute;
-    right: 30px;
-    top: 472px;
-    width: 300px;
-    height: 33px;
-    border-radius: 30px;
-}
-
-.lupa{
-    height: 15px;
-    position: absolute;
-    top: 480px;
-    right: 40px;
-}
-
-::placeholder{
-    padding-left: 5px;
-}
-/* NAV */
+/* FOOTER */
