--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
 /* BODY */
 body{
     background-color: #D8E0B7;
@@ -8,32 +15,89 @@ body{
 section{
     display: inline-flex;
     flex-direction: column;
-    background-color: white;
-    height: 600px; /* altura */
+    background-color: #D8E0B7;
+    height: 840px; /* altura */
     width: 1150px; /* largura */
     margin: 0 0 0 400px;
 }
 /* SECTION */
 
 /* HEADER */
-header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
 
-.logo{
-    margin: 0 0 0 700px;
-    display: flex;
-    height: 80px;
-    border-radius: 25px;
+header{
+    border: 1px solid black;
+    background-color: #E0D5A4;
 }
 
 .e-name{
-    font-size: 50px;
-    margin-left: 200px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-left: 15px;
+    justify-content: space-between;
+    align-items: center;
 }
+
+.site-name{
+    font-size: 40px;
+    position: relative;
+    right: 460px;
+}
+
+.logo{
+    height: 80px;
+    border-radius: 20px;
+}
+
+.list-login{
+    display: inline-flex;
+    align-items: center;
+    gap: 20px;
+    list-style-type: none;
+}
+
+.login-item, .register-item{
+    cursor: pointer;
+    margin-right: 30px;
+    font-size: 25px;
+}
+
+.img-header{
+    color: black;
+    text-decoration: none;
+}
+.img-header:hover{
+    color: white;
+}
+
+.login-icon{
+    transform: rotateY(180deg);
+    height: 24px;
+    position: absolute;
+    right: 335px;
+}
+
+.register-icon{
+    height: 24px;
+    transform: rotateY(180deg);
+    position: absolute;
+    right: 205px;
+}
+
 /* HEADER */
+
+/* FOOTER */
+
+footer{
+    background-color: #B0E092;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 31px;
+}
+
+/* FOOTER */
+
 
 /* MAIN */
 main{
@@ -45,10 +109,13 @@ main{
 .img1{
     display: inline-flex;
     flex-direction: row;
+    background-color: #D8E0B7;
 }
 .pic1{
     height: 600px;
     transition: opacity 1s ease-in-out;
+    position: relative;
+    top: 110px;
 }
 
 .pic2{
@@ -61,10 +128,14 @@ main{
     display: none;
     position: absolute;
     height: 600px;
+    top: 192px;
 }
 
-.container{
-    justify-content: baseline;
+.container-text{
+    position: relative;
+    top: 110px;
+    right: 35px;
+    background-color: white;
 }
 
 .roupa{
@@ -201,7 +272,7 @@ button{
     padding: 5px 10px;
     background-color: rgb(172, 121, 219);
     color: white;
-    margin: 50px 0 0 200px;
+    margin: 80px 0 0 150px;
     height: 50px;
     width: 300px;
     font-size: 30px;
@@ -239,15 +310,16 @@ button{
     top: 0;
     left: 0;
     transform: translate(-100%, -100%);
+    z-index: -1;
 }
 
 /* CHECKBOX */
 
 /* LABEL */
 
-.lb1, .lb2{
+.lb1{
     display: block;
-    width: 45px;
+    width: 40px;
     height: 15px;
     border-radius: 100%;
     border: 1px solid gray;
@@ -256,16 +328,28 @@ button{
     z-index: 3;
 }
 
+.lb2{
+    display: block;
+    width: 37px;
+    height: 15px;
+    border-radius: 100%;
+    border: 1px solid gray;
+    cursor: pointer;
+    background-color: gray;
+    z-index: 3;
+
+}
+
 .lb1{
     position: relative;
-    top: 500px;
+    top: 600px;
     right: 31px;
 }
 
 .lb2{
     position: relative;
-    top: 530px;
-    right: 50px;
+    top: 625px;
+    right: 46px;
 }
 
 .rad1:checked ~ .lb1 {
